# source

./: .env  .gitignore  index.html  package-lock.json  package.json  push.bat  vite.config.ts
LauncherTauri/: index.html  package-lock.json  package.json  tsconfig.app.json
LauncherTauri/src/: App.tsx  index.css  main.tsx  vite-env.d.ts
LauncherTauri/src-tauri/: Cargo.toml  tauri.conf.json
LauncherTauri/src-tauri/capabilities/: default.json
LauncherTauri/src-tauri/src/: auth.rs  client_installer.rs  lib.rs  minecraft.rs
ShakeDownClient/: .gitignore  CHANGELOG.md  COMPLETE_FEATURES.md  FINAL_SUMMARY.md  GUI_ANIMATIONS.md  GUI_GUIDE.md  GUI_IMPROVEMENTS.md  GUI_PREVIEW.md  LICENSE  README.md  SCROLL_DEBUG.md  SWING_ANIMATIONS_GUIDE.md  VISUAL_EFFECTS_FIX.md  build.gradle  gradle.properties  gradlew.bat  settings.gradle  ИНСТРУКЦИЯ-ДЛЯ-ПОМОЩНИКА.md
ShakeDownClient/run/: options.txt  servers.dat_old  usercache.json
docs/: COMMENTS_UPDATE.md  GITHUB_AUTH_CHANGELOG.md  GITHUB_OAUTH_SETUP.md  RATE_LIMITING_FIX.md  REACTIONS_FIX.md
server/: index.backup.js  index.js
server/scripts/: check-admin-password.js  check-admin.js  create-admin.js  create-admins.js  delete-user.js  fix-reactions-constraint.js  migrate-add-uid.js  test-admin-login.js  test-api-ban-delete.js  test-ban-delete.js  test-delete-account.js  test-google-user-delete.js  test-oauth-flow.js  test-oauth-localhost.js  update-admin-email.js
src/: App.tsx  vite-env.d.ts
src/components/: AnalyticsPanel.tsx  AnimatedBackground.tsx  CommentsSection.tsx  DeleteAccountModal.tsx  LogoutModal.tsx  (+2 more)
(+244 files in other folders)
